objects/SKU_Level_Product__c.object
<CustomObject>
    <fields>
        <fullName>Product_SKU__c</fullName>
        <externalId>true</externalId>
        <label>Product SKU#</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SFDC_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SFDC Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>SKU-Level Products</relationshipLabel>
        <relationshipName>Product_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UVX_Product_Family_Code__c</fullName>
        <description>Product Family Code from the UVX.  If there&apos;s a difference between this and the Product Family Code on the parent SFDC Product, then either the Family Code on the parent product is wrong, or this should roll up to a different parent</description>
        <label>UVX Product Family Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UVX_Product_Family__c</fullName>
        <label>UVX Product Family</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UVX_Product_Name_1__c</fullName>
        <description>Directly from DCS. Used only for product matching logic.</description>
        <label>UVX Product Name 1</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UVX_Product_Name_2__c</fullName>
        <description>Directly from DCS. Used only for product matching logic.</description>
        <label>UVX Product Name 2</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UVX_Product_Short_Name__c</fullName>
        <label>UVX Product Short Name</label>
        <length>51</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UVX_Vendor_Name__c</fullName>
        <description>Vendor Name from the UVX</description>
        <label>UVX Vendor Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UVX_Vendor_Number__c</fullName>
        <description>In case there was no matching Vendor lookup record with this number.
Comes from IW</description>
        <label>UVX Vendor Number</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <referenceTo>Vendor__c</referenceTo>
        <relationshipLabel>SKU-Level Products</relationshipLabel>
        <relationshipName>SKU_Level_Products</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>